car optionBlocks styling + carList(show, edit and delete)

--- a/packages/car-customizer-core/layout.html
+++ b/packages/car-customizer-core/layout.html
@@ -15,8 +15,8 @@
 			  <div class="mdl-layout__drawer">
 			    <span class="mdl-layout-title">Car Customizer</span>
 			    <nav class="mdl-navigation">
-			      <a class="mdl-navigation__link" href="/">Customize</a>
-			      <a class="mdl-navigation__link" href="/sessions">Cars</a>
+			      <a class="mdl-navigation__link" href="/">Home</a>
+			      <a class="mdl-navigation__link" href="/cars">Cars</a>
 			    </nav>
 			  </div>
 
